--- a/_posts/0000-01-02-CSC10.md
+++ b/_posts/0000-01-02-CSC10.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+"A GOOD CTI IS INTEGRAL TO A COUNTRY'S SECURITY AND DEVELOPMENT"
 Use the left arrow to go back!
